--- a/singularity/Singularity.1.0.1
+++ b/singularity/Singularity.1.0.1
@@ -1,21 +1,21 @@
 Bootstrap: docker
-From: continuumio/miniconda3:4.8.2
+From: nfcore/base:1.10.2
 
 %labels
     MAINTAINER Peter Kruczkiewicz
     DESCRIPTION Singularity image containing all requirements for the peterk87/nf-illmap pipeline
-    VERSION 1.0.0
+    VERSION 1.0.1
 
 %environment
-    PATH=/opt/conda/envs/nf-illmap-1.0.0/bin:$PATH
+    PATH=/opt/conda/envs/nf-illmap-1.0.1/bin:$PATH
     export PATH
 
 %files
-    environment.1.0.0.yml /environment.yml
+    environment.1.0.1.yml /environment.yml
 
 %post
     export PATH=/opt/conda/bin:$PATH
-    apt-get update && apt-get install -y procps curl && apt-get clean -y
+    apt-get update && apt-get install -y curl && apt-get clean -y && rm -rf /var/lib/apt/lists/*
     conda update conda
     conda env create -f /environment.yml
     conda clean -a
